# twat-hatch

./: .gitignore  CHANGELOG.md  CLEANUP.txt  LOG.md  PLAN.md  README.md  REPO_CONTENT.txt  TODO.md  pyproject.toml  twat-hatch.toml
.cursor/rules/: filetree.mdc
.github/workflows/: push.yml  release.yml
demo/: twat-hatch.toml
src/twat_hatch/: __init__.py  __main__.py  cli.py  config.py  core.py  hatch.py  utils.py
src/twat_hatch/themes/: __init__.py  package.toml.j2  plugin.toml.j2  plugin_host.toml.j2
src/twat_hatch/themes/_shared/: base.toml.j2
src/twat_hatch/themes/_shared/snippets/: author.toml.j2  dependencies.toml.j2  development.toml.j2  features.toml.j2  package.toml.j2  tools.toml.j2
src/twat_hatch/themes/default/: .gitignore.j2  LICENSE.j2  README.md.j2  hatch_.gitignore  hatch_README.md  hatch_core_plugin.py  hatch_init_core.py  hatch_init_plugin.py  hatch_pyproject.toml  hatch_pyproject_plugin.toml  hatch_twat.toml  hidden.gitignore.j2  pyproject.toml.j2  twat-hatch.toml.j2
src/twat_hatch/themes/default/.github/workflows/: push.yml.j2  release.yml.j2
src/twat_hatch/themes/default/src/: __package_name__.py.j2  plugin.py.j2
src/twat_hatch/themes/default/tests/: test_package.py.j2
src/twat_hatch/themes/mkdocs/: hatch_docs_api.md  hatch_docs_changelog.md  hatch_docs_contributing.md  hatch_docs_index.md  hatch_mkdocs.yml
src/twat_hatch/themes/package/: package.toml.j2
src/twat_hatch/themes/plugin/: README.md.j2  plugin.toml.j2  pyproject.toml.j2
src/twat_hatch/themes/plugin/src/: __init__.py.j2
src/twat_hatch/themes/plugin/src/__package_name__/: __init__.py.j2
src/twat_hatch/themes/plugin_host/: README.md.j2  plugin_host.toml.j2  pyproject.toml.j2
src/twat_hatch/themes/plugin_host/src/: __init__.py.j2
tests/: test_package.py  test_twat_hatch.py
